kubernetes/blackholes.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: approver
  labels:
    app.kubernetes.io/name: approver
    admission.datadoghq.com/enabled: "true"
    tags.datadoghq.com/service: approver
  annotations:
    admission.datadoghq.com/java-lib.version: latest
spec:
  containers:
  - name: approver
    image: yaalexf/blackhole:main
    imagePullPolicy: Always
    resources:
      limits: {}
---
apiVersion: v1
kind: Pod
metadata:
  name: copywriter
  labels:
    app.kubernetes.io/name: copywriter
    admission.datadoghq.com/enabled: "true"
    tags.datadoghq.com/service: copywriter
  annotations:
    admission.datadoghq.com/java-lib.version: latest
spec:
  containers:
  - name: copywriter
    image: yaalexf/blackhole:main
    imagePullPolicy: Always
    resources:
      limits: {}
---
apiVersion: v1
kind: Pod
metadata:
  name: emailer
  labels:
    app.kubernetes.io/name: emailer
    admission.datadoghq.com/enabled: "true"
    tags.datadoghq.com/service: emailer
  annotations:
    admission.datadoghq.com/java-lib.version: latest
spec:
  containers:
  - name: emailer
    image: yaalexf/blackhole:main
    imagePullPolicy: Always
    resources:
      limits: {}
