kubernetes/developer-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: developer-app
  labels:
    app.kubernetes.io/name: developer-app
    tags.datadoghq.com/service: developer-app
    pipsquack.com/cost-centre: cc001
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: developer-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: developer-app
        admission.datadoghq.com/enabled: "true"
      annotations:
        admission.datadoghq.com/java-lib.version: latest
    spec:
      containers:
      - name: developer-app
        image: yaalexf/developer-app@sha256:f4a7f3d758121575a548a979e0a470f5bd2624bd1a73ee31668d05931ed4a44d
        imagePullPolicy: Always
        resources: {}
