kubernetes/loadrunner.yaml
apiVersion: v1
kind: Pod
metadata:
  name: loadrunner
  labels:
    app.kubernetes.io/name: loadrunner
    admission.datadoghq.com/enabled: "true"
    tags.datadoghq.com/service: loadrunner
    tags.datadoghq.com/version: "0.0"
spec:
  containers:
    - name: load
      image: yaalexf/toolbox:alpine
      imagePullPolicy: Always
      command: ["sh", "-c", "--"]
      args:
        - |-
          [...]
      resources:
        limits: {}
