kubernetes/mysql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql
  labels:
    app.kubernetes.io/name: mysql
  annotations:
    ad.datadoghq.com/mysql.check_names: '["mysql"]'
    ad.datadoghq.com/mysql.init_configs: |-
      [{
        "service": "mysql"
      }]
    ad.datadoghq.com/mysql.instances: |-
      [
        {
          "host": "%%host%%",
          "username": "datadog",
          "password": "ENC[k8s_secret@mysql/db-passwords/mysql]",
          "dbm": true
        }
      ] 
spec:
  containers:
    - name: mysql 
      image: mysql:8
      resources:
        requests:
          memory: "832Mi"
          cpu: "5m"
        limits:
          memory: "1Gi"
          cpu: "1"
      volumeMounts:
        - mountPath: /var/lib/mysql
          name: data
        - mountPath: /docker-entrypoint-initdb.d
          name: initdb
        - mountPath: /etc/mysql/conf.d/99-datadog.cnf
          name: datadog-mysql-conf
          subPath: datadog.cnf
  volumes:
    - emptyDir: {}
      name: data
    - emptyDir: {}
      name: initdb
    - configMap:
        name: datadog-setup
      name: datadog-setup
    - configMap:
        name: datadog-mysql-conf
      name: datadog-mysql-conf
---
kind: Service
apiVersion: v1
metadata:
  name: mysql
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mysql
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306
