kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: developer-app
spec:
  selector:
    app.kubernetes.io/name: developer-app
  ports:
    - port: 80
      targetPort: 8080
