kubernetes/adminer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: adminer
  labels:
    app.kubernetes.io/name: adminer
spec:
  containers:
    - name: adminer
      image: adminer
      resources:
        requests:
          memory: "14Mi"
          cpu: "30m"
        limits:
          memory: "512Mi"
          cpu: "500m"
---
kind: Service
apiVersion: v1
metadata:
  name: adminer
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: adminer
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminer
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /adminer(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: adminer
            port: 
              number: 8080
